# sierpinski-triangle

./: Cargo.toml  README.md
src/: main.rs
