[package]
name = "sierpinski-triangle"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Mikkel-T <mikkel@mikkel-t.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
rand = "0.8.5"
indicatif = "0.16.2"